--- a/src/test/resources/jdbc.properties
+++ b/src/test/resources/jdbc.properties
@@ -5,6 +5,12 @@ jdbc.pool.minIdle=10
 #连接池最大活跃连接数
 jdbc.pool.maxActive=100
 
+#turtle druid
+turtle.jdbc.driver=com.alibaba.cobar.jdbc.Driver
+turtle.jdbc.url=jdbc:cobar://10.1.6.90:8066/turtle?useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull&amp;autoReconnect=true
+turtle.jdbc.username=turtle
+turtle.jdbc.password=turtle@552208
+
 #boss druid
 boss.jdbc.driver=com.alibaba.cobar.jdbc.Driver
 boss.jdbc.url=jdbc:cobar://10.1.6.90:8066/boss?useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull&amp;autoReconnect=true
@@ -28,3 +34,9 @@ trade_conf.jdbc.driver=com.mysql.jdbc.Driver
 trade_conf.jdbc.url=jdbc:mysql://10.1.6.10:3306/trade_conf?useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull&amp;autoReconnect=true
 trade_conf.jdbc.username=twodfire
 trade_conf.jdbc.password=123456
+
+#item_center druid
+item_center.jdbc.driver=com.mysql.jdbc.Driver
+item_center.jdbc.url=jdbc:mysql://common101.my.2dfire-daily.com:3306/item_center?useUnicode=true&amp;characterEncoding=utf-8&amp;zeroDateTimeBehavior=convertToNull&amp;autoReconnect=true
+item_center.jdbc.username=twodfire
+item_center.jdbc.password=123456
