--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,14 @@
     <build>
         <filters>
             <filter>src/test/resources/jdbc.properties</filter>
+            <filter>src/test/filter/${env}.properties</filter>
         </filters>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
 
         <testResources>
             <testResource>
@@ -19,13 +26,16 @@
                 <filtering>true</filtering>
                 <includes>
                     <include>config.properties</include>
+                    <include>log4j.properties</include>
+                    <include>jdbc.properties</include>
                     <include>**/*.xml</include>
                 </includes>
             </testResource>
         </testResources>
 
+
         <plugins>
-        <!-- 添加插件 关联testNg.xml -->
+             <!--添加插件 关联testNg.xml-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -48,14 +58,12 @@
                     </properties>
                 </configuration>
             </plugin>
-
-            <!-- Compiler plugin configures the java version to be usedfor compiling
-                the code -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -63,9 +71,9 @@
 
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <druid-version>1.0.16</druid-version>
         <dubbo-version>2.5.4</dubbo-version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.directory>target</project.build.directory>
         <gson-version>2.2.4</gson-version>
         <opencsv-version>2.4</opencsv-version>
@@ -286,6 +294,56 @@
             <scope>compile</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.twodfire</groupId>
+            <artifactId>twodfire-redis</artifactId>
+            <version>1.3.45</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.dfire.soa</groupId>
+            <artifactId>boss-center-client</artifactId>
+            <version>1.0.51</version>
+        </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <env>dev</env>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>daily</id>
+            <properties>
+                <env>daily</env>
+            </properties>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>pre</id>
+            <properties>
+                <env>pre</env>
+            </properties>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>publish</id>
+            <properties>
+                <env>publish</env>
+            </properties>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
 </project>
