--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -6,6 +6,8 @@ env = pre
 
 #daily
 SERVER_URL=http://boss-api.2dfire-daily.com
+SERVER_PRE_URL=http://boss-api.2dfire-pre.com
+SERVER_RELEASE_URL=https://boss-api.2dfire.com
 
 #dev
 SERVER_LS3Q_URL = mull
